# typedb-console

./: .bazelrc  .gitignore  BUILD  BZLMOD_MIGRATION_STATUS.md  Cargo.toml  CommandLineOptions.java  Console.java  ConsoleSession.java  GraknConsole.java  MODULE.bazel  Printer.java  README.md  RELEASE_NOTES_LATEST.md  RELEASE_TEMPLATE.md  ReplCommand.java  RunQueriesResult.java  TransactionReplCommand.java  TypeDBConsole.java  Utils.java  VERSION  WORKSPACE  deployment.bzl  deployment.properties  rustfmt.toml
.circleci/: config.yml
.circleci/windows/: dependencies.config  deploy_release.bat  deploy_snapshot.bat  git.patch  package_binary_as_exe.patch  prepare.bat  short_workspace.patch
.factory/: automation.yml
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  FEATURE_REQUEST.md  REFACTOR.md
.github/windows/: dependencies.config  deploy_release.bat  deploy_snapshot.bat  package_binary_as_exe.patch  prepare.bat  short_workspace.patch
.github/workflows/: build.yml  console-release.yml  loader-release.yml  snapshot.yml  test-console.yml  test-loader.yml  typeql-check-release.yml
.grabl/: automation.yml
binary/: BUILD  typedb  typedb.bat
command/: REPLCommand.java  ReplCommand.java  TransactionREPLCommand.java  TransactionReplCommand.java
common/: BUILD  Cargo.toml  Either.java  Printer.java  Utils.java  tls.rs
common/exception/: ErrorMessage.java  GraknConsoleException.java  TypeDBConsoleException.java
common/util/: Java.java  Utils.java
conf/logback/: BUILD  logback.xml
conf/rpm/: BUILD  grakn-console.spec
config/logback/: BUILD  logback.xml
config/rpm/: BUILD  grakn-console.spec
console/: BUILD  Cargo.toml  README.md  main.rs  operations.rs  printer.rs
console/repl/: command.rs
console/tests/assembly/: BUILD  script.tqls
dependencies/graknlabs/: artifacts.bzl  dependencies.bzl  repositories.bzl
dependencies/maven/: BUILD  artifacts.bzl  artifacts.snapshot  dependencies.bzl  dependencies.yaml  update.sh
dependencies/maven/artifacts/io/grpc/: BUILD
dependencies/typedb/: repositories.bzl
dependencies/vaticle/: artifacts.bzl  repositories.bzl
exception/: ErrorMessage.java  GraknConsoleException.java
loader/: BUILD  CONCURRENCY.md  Cargo.toml  README.md  RELEASE_NOTES_LATEST.md  RELEASE_TEMPLATE.md  SQL_MIGRATION.md  WALKTHROUGH.md  checkpoint.rs  cli.rs  csv_reader.rs  data.rs  load.rs  main.rs  output.rs  params.rs  progress.rs  prompts.rs  query.rs  rejects.rs  setup.rs  startup.rs
loader/tests/assembly/: BUILD  data-with-rejects.csv  data.csv  friendships.csv  insert-friendship.tql  insert.tql  schema-with-friendships.tql  schema.tql  test_loader.rs
printer/: Printer.java  StringPrinter.java
src/: cli.rs  completion_cache.rs  completions.rs  constants.rs  main.rs  operations.rs  printer.rs  runtime.rs
src/repl/: command.rs  line_reader.rs  mod.rs  parser.rs
templates/: BUILD  Version.java
test/: BUILD  GraknConsoleIT.java  invalid-data.gql
test/assembly/: AssemblyTest.java  BUILD
test/resources/: BUILD  grakn.properties
test/runner/: BUILD  TypeDBConsoleRunner.java  Util.java
tests/assembly/: BUILD  attributes.tql  entities.tql  script.tqls  test_assembly.rs  test_script.rs
tool/connect/: BUILD  Cargo.toml  addresses.rs  lib.rs
tool/release/: create_notes.sh  create_notes_all.sh  create_notes_console.sh  create_notes_loader.sh  create_notes_typeql_check.sh
tool/runner/: BUILD  Cargo.toml  TypeDBConsoleRunner.java  Util.java  lib.rs  runner.rs  util.rs
tool/rust/: sync.sh
typeql-check/: BUILD  Cargo.toml  RELEASE_NOTES_LATEST.md  RELEASE_TEMPLATE.md  lib.rs  main.rs
typeql-check/brew/: BUILD  typeql-check.rb
util/: FlushableMemoryHistory.java
