
[workspace]
	resolver = "2"
	members = ["loader", "tool/runner", "tool/connect", "console"]

	[workspace.dependencies]

		[workspace.dependencies.tokio]
			features = ["bytes", "default", "fs", "io-std", "io-util", "libc", "macros", "mio", "net", "rt", "rt-multi-thread", "signal", "signal-hook-registry", "socket2", "sync", "test-util", "time", "tokio-macros"]
			version = "1.52.3"
			default-features = false

		[workspace.dependencies.typedb_cli_connect]
			path = "tool/connect"
			features = []
			default-features = false

		[workspace.dependencies.serde]
			features = ["alloc", "default", "derive", "rc", "serde_derive", "std"]
			version = "1.0.228"
			default-features = false

		[workspace.dependencies.csv]
			features = []
			version = "1.4.0"
			default-features = false

		[workspace.dependencies.glob]
			features = []
			version = "0.3.3"
			default-features = false

		[workspace.dependencies.futures]
			features = ["alloc", "async-await", "default", "executor", "futures-executor", "std", "thread-pool"]
			version = "0.3.32"
			default-features = false

		[workspace.dependencies.itertools]
			features = ["default", "use_alloc", "use_std"]
			version = "0.14.0"
			default-features = false

		[workspace.dependencies.rpassword]
			features = []
			version = "7.5.2"
			default-features = false

		[workspace.dependencies.home]
			features = []
			version = "0.5.12"
			default-features = false

		[workspace.dependencies.sha2]
			features = ["default", "std"]
			version = "0.10.9"
			default-features = false

		[workspace.dependencies.rustyline]
			features = ["custom-bindings", "fd-lock", "radix_trie", "with-file-history"]
			version = "15.0.0"
			default-features = false

		[workspace.dependencies.clap]
			features = ["color", "default", "derive", "error-context", "help", "std", "suggestions", "usage", "wrap_help"]
			version = "4.6.1"
			default-features = false

		[workspace.dependencies.typedb_binary_runner]
			path = "tool/runner"
			features = []
			default-features = false

		[workspace.dependencies.tempdir]
			features = []
			version = "0.3.7"
			default-features = false

		[workspace.dependencies.typeql]
			features = []
			rev = "f9fd49770ceb4315ec95364eb15bc904e1b3f67d"
			git = "https://github.com/typedb/typeql"
			default-features = false

		[workspace.dependencies.typedb-driver]
			features = []
			rev = "83b3479b5488899c3bad2d006dc9fdab4d3bed38"
			git = "https://github.com/typedb/typedb-driver"
			default-features = false

		[workspace.dependencies.chrono]
			features = ["alloc", "clock", "default", "iana-time-zone", "js-sys", "now", "oldtime", "std", "wasm-bindgen", "wasmbind", "winapi", "windows-link"]
			version = "0.4.44"
			default-features = false

		[workspace.dependencies.serde_json]
			features = ["default", "raw_value", "std"]
			version = "1.0.149"
			default-features = false

		[workspace.dependencies.sentry]
			features = ["backtrace", "contexts", "httpdate", "panic", "rustls", "sentry-backtrace", "sentry-contexts", "sentry-panic", "ureq", "webpki-roots"]
			version = "0.36.0"
			default-features = false

		[workspace.dependencies.ureq]
			features = ["default", "gzip", "tls"]
			version = "2.12.1"
			default-features = false

