# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

module(
    name = "typedb_console",
    version = "0.0.0",
    compatibility_level = 1,
)

# Core BCR dependencies
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_java", version = "8.6.2")
bazel_dep(name = "rules_jvm_external", version = "6.6")
bazel_dep(name = "rules_python", version = "1.0.0")
bazel_dep(name = "rules_rust", version = "0.56.0")
bazel_dep(name = "rules_kotlin", version = "2.0.0")
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "protobuf", version = "29.3", repo_name = "com_google_protobuf")

# typedb ecosystem dependencies
bazel_dep(name = "typedb_dependencies", version = "0.0.0")
git_override(
    module_name = "typedb_dependencies",
    remote = "https://github.com/krishnangovindraj/dependencies",
    commit = "89fb404efbb4735dbec9f3edc33ba9d7b62c1ad2",
)

bazel_dep(name = "typedb_bazel_distribution", version = "0.0.0")
git_override(
    module_name = "typedb_bazel_distribution",
    remote = "https://github.com/typedb/bazel-distribution",
    commit = "a6363bf0b6208cabcfbf8865601e9eb03641559f",
)

bazel_dep(name = "typeql", version = "0.0.0")
git_override(
    module_name = "typeql",
    remote = "https://github.com/typedb/typeql",
    tag = "3.8.3-rc0",
)

bazel_dep(name = "typedb_driver", version = "0.0.0")
git_override(
    module_name = "typedb_driver",
    remote = "https://github.com/typedb/typedb-driver",
    tag = "3.8.2-rc0",
)

bazel_dep(name = "typedb_protocol", version = "0.0.0")
git_override(
    module_name = "typedb_protocol",
    remote = "https://github.com/typedb/typedb-protocol",
    tag = "3.7.1-rc1",
)

bazel_dep(name = "typedb_behaviour", version = "0.0.0")
git_override(
    module_name = "typedb_behaviour",
    remote = "https://github.com/typedb/typedb-behaviour",
    commit = "dabc971c4b9b9e63196c45b748e5cb6037e71076",
)

# Python toolchain
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.11",
    ignore_root_user_error = True
)

# Rust toolchain
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    versions = ["1.81.0"],
    extra_target_triples = [
        "aarch64-apple-darwin",
        "aarch64-unknown-linux-gnu",
        "x86_64-apple-darwin",
        "x86_64-pc-windows-msvc",
        "x86_64-unknown-linux-gnu",
    ],
)
use_repo(rust, "rust_toolchains")
register_toolchains("@rust_toolchains//:all")

# Rust crates - import from typedb_dependencies' crate extension
# This ensures type compatibility across all TypeDB modules
crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
use_repo(crate, "crates")

# Maven dependencies - import from typedb_dependencies
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
use_repo(maven, "maven")

# Register Kotlin toolchain
register_toolchains("@rules_kotlin//kotlin/internal:default_toolchain")

# workspace_refs for release validation
workspace_refs = use_repo_rule("@typedb_bazel_distribution//common/workspace_refs:rules.bzl", "_workspace_refs")
workspace_refs(
    name = "typedb_console_workspace_refs",
    workspace_commit_dict = {
        "typeql+": "1ef9ff633cbe564ce661de0686aa7ba7b0fac0ad",
        "typedb_driver+": "b657d41034f1039490403ca6f950e20d1c064eda",
    },
    workspace_tag_dict = {
        "typeql+": "3.8.3-rc0",
        "typedb_driver+": "3.8.2-rc0",
    },
)

# TypeDB server artifacts for testing
# These download the TypeDB server binary for integration/behaviour tests
native_artifact_files = use_extension("@typedb_dependencies//distribution/artifact:rules.bzl", "native_artifact_files")
native_artifact_files.artifact(
    name = "typedb_artifact",
    group_name = "typedb-all-{platform}",
    artifact_name = "typedb-all-{platform}-{version}.{ext}",
    tag = "3.8.3",
)
use_repo(
    native_artifact_files,
     "typedb_artifact_linux-x86_64",
     "typedb_artifact_linux-arm64",
     "typedb_artifact_mac-x86_64",
     "typedb_artifact_mac-arm64",
     "typedb_artifact_windows-x86_64",
)
