# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

module(
    name = "typedb_console",
    version = "0.0.0",
    compatibility_level = 1,
)

# Core BCR dependencies
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_java", version = "8.6.2")
bazel_dep(name = "rules_jvm_external", version = "6.6")
bazel_dep(name = "rules_python", version = "1.0.0")
bazel_dep(name = "rules_kotlin", version = "2.0.0")
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "protobuf", version = "29.3", repo_name = "com_google_protobuf")

# typedb ecosystem dependencies
bazel_dep(name = "typedb_bazel_distribution", version = "0.0.0")
git_override(
    module_name = "typedb_bazel_distribution",
    remote = "https://github.com/typedb/bazel-distribution",
    commit = "fb0b9bb27109762b1c275b0ad98c8bcd3fbf5860",
)

bazel_dep(name = "typedb_dependencies", version = "0.0.0")
git_override(
    module_name = "typedb_dependencies",
    remote = "https://github.com/typedb/dependencies",
    commit = "12f5bc1a983e64ba7602a965eb36019dcd64bdd7",
)

bazel_dep(name = "typeql", version = "0.0.0")
git_override(
    module_name = "typeql",
    remote = "https://github.com/typedb/typeql",
    commit = "4b716f4c25c98438d30d61645e566e00262d8e76",
)

bazel_dep(name = "typedb_driver", version = "0.0.0")
git_override(
    module_name = "typedb_driver",
    remote = "https://github.com/typedb/typedb-driver",
    commit = "77f84787f5dbc5ca2260a4522c0fbdfa92f73224",
)

bazel_dep(name = "typedb_protocol", version = "0.0.0")
git_override(
    module_name = "typedb_protocol",
    remote = "https://github.com/typedb/typedb-protocol",
    commit = "df650449170365979f6deaafc32e002f5e4ce29c",
)

bazel_dep(name = "typedb_behaviour", version = "0.0.0")
git_override(
    module_name = "typedb_behaviour",
    remote = "https://github.com/typedb/typedb-behaviour",
    commit = "8a69b7f646b78702bd48f02109c69a88ad6d6367",
)

# Python toolchain
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.11",
    ignore_root_user_error = True
)

# Rust rules need typedb_dependencies for patching
bazel_dep(name = "rules_rust", version = "0.56.0")
# Backport a bug fix from rules_rust 0.58 (bazelbuild/rules_rust#3251)
git_override(
    module_name = "rules_rust",
    remote = "https://github.com/bazelbuild/rules_rust",
    tag = "0.56.0",
    patches = ["@@typedb_dependencies+//patches:rules_rust.patch"],
)

# Rust toolchain
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    versions = ["1.93.0"],
    extra_target_triples = [
        "aarch64-apple-darwin",
        "aarch64-unknown-linux-gnu",
        "x86_64-apple-darwin",
        "x86_64-pc-windows-msvc",
        "x86_64-unknown-linux-gnu",
    ],
    rustfmt_version = "nightly/2026-04-15",
)
use_repo(rust, "rust_toolchains")
register_toolchains("@rust_toolchains//:all")

rust_host_tools = use_extension("@rules_rust//rust:extensions.bzl", "rust_host_tools")
rust_host_tools.host_tools(version = "1.93.0")

# Rust crates - import from typedb_dependencies' crate extension
# This ensures type compatibility across all TypeDB modules
crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
use_repo(crate, "crates")

# Maven dependencies - import from typedb_dependencies
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
use_repo(maven, "maven")

# Register Kotlin toolchain
register_toolchains("@rules_kotlin//kotlin/internal:default_toolchain")

# workspace_refs for release validation
workspace_refs = use_repo_rule("@typedb_bazel_distribution//common/workspace_refs:rules.bzl", "_workspace_refs")
workspace_refs(
    name = "typedb_console_workspace_refs",
    workspace_commit_dict = {
        "typeql+": "4b716f4c25c98438d30d61645e566e00262d8e76",
        "typedb_driver+": "77f84787f5dbc5ca2260a4522c0fbdfa92f73224",
        "typedb_protocol+": "df650449170365979f6deaafc32e002f5e4ce29c",
    },
    workspace_tag_dict = {
    },
)

# TypeDB server artifacts for integration tests
# These download the TypeDB server binary for assembly tests
http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_file(
    name = "typedb_artifact_linux-arm64",
    urls = ["https://repo.typedb.com/public/public-snapshot/raw/names/typedb-all-linux-arm64/versions/1e4fe6c41b2c90ca3aced97c3c575fb2cad9747d/typedb-all-linux-arm64-1e4fe6c41b2c90ca3aced97c3c575fb2cad9747d.tar.gz"],
    downloaded_file_path = "typedb-all-linux-arm64-1e4fe6c41b2c90ca3aced97c3c575fb2cad9747d.tar.gz",
)

http_file(
    name = "typedb_artifact_linux-x86_64",
    urls = ["https://repo.typedb.com/public/public-snapshot/raw/names/typedb-all-linux-x86_64/versions/1e4fe6c41b2c90ca3aced97c3c575fb2cad9747d/typedb-all-linux-x86_64-1e4fe6c41b2c90ca3aced97c3c575fb2cad9747d.tar.gz"],
    downloaded_file_path = "typedb-all-linux-x86_64-1e4fe6c41b2c90ca3aced97c3c575fb2cad9747d.tar.gz",
)

http_file(
    name = "typedb_artifact_mac-arm64",
    urls = ["https://repo.typedb.com/public/public-snapshot/raw/names/typedb-all-mac-arm64/versions/1e4fe6c41b2c90ca3aced97c3c575fb2cad9747d/typedb-all-mac-arm64-1e4fe6c41b2c90ca3aced97c3c575fb2cad9747d.zip"],
    downloaded_file_path = "typedb-all-mac-arm64-1e4fe6c41b2c90ca3aced97c3c575fb2cad9747d.zip",
)

http_file(
    name = "typedb_artifact_mac-x86_64",
    urls = ["https://repo.typedb.com/public/public-snapshot/raw/names/typedb-all-mac-x86_64/versions/1e4fe6c41b2c90ca3aced97c3c575fb2cad9747d/typedb-all-mac-x86_64-1e4fe6c41b2c90ca3aced97c3c575fb2cad9747d.zip"],
    downloaded_file_path = "typedb-all-mac-x86_64-1e4fe6c41b2c90ca3aced97c3c575fb2cad9747d.zip",
)

http_file(
    name = "typedb_artifact_windows-x86_64",
    urls = ["https://repo.typedb.com/public/public-snapshot/raw/names/typedb-all-windows-x86_64/versions/1e4fe6c41b2c90ca3aced97c3c575fb2cad9747d/typedb-all-windows-x86_64-1e4fe6c41b2c90ca3aced97c3c575fb2cad9747d.zip"],
    downloaded_file_path = "typedb-all-windows-x86_64-1e4fe6c41b2c90ca3aced97c3c575fb2cad9747d.zip",
)

#
#http_file(
#    name = "typedb_artifact_linux-arm64",
#    urls = ["https://repo.typedb.com/public/public-release/raw/names/typedb-all-linux-arm64/versions/3.8.0/typedb-all-linux-arm64-3.8.0.tar.gz"],
#    downloaded_file_path = "typedb-all-linux-arm64-3.8.0.tar.gz",
#)
#
#http_file(
#    name = "typedb_artifact_linux-x86_64",
#    urls = ["https://repo.typedb.com/public/public-release/raw/names/typedb-all-linux-x86_64/versions/3.8.0/typedb-all-linux-x86_64-3.8.0.tar.gz"],
#    downloaded_file_path = "typedb-all-linux-x86_64-3.8.0.tar.gz",
#)
#
#http_file(
#    name = "typedb_artifact_mac-arm64",
#    urls = ["https://repo.typedb.com/public/public-release/raw/names/typedb-all-mac-arm64/versions/3.8.0/typedb-all-mac-arm64-3.8.0.zip"],
#    downloaded_file_path = "typedb-all-mac-arm64-3.8.0.zip",
#)
#
#http_file(
#    name = "typedb_artifact_mac-x86_64",
#    urls = ["https://repo.typedb.com/public/public-release/raw/names/typedb-all-mac-x86_64/versions/3.8.0/typedb-all-mac-x86_64-3.8.0.zip"],
#    downloaded_file_path = "typedb-all-mac-x86_64-3.8.0.zip",
#)
#
#http_file(
#    name = "typedb_artifact_windows-x86_64",
#    urls = ["https://repo.typedb.com/public/public-release/raw/names/typedb-all-windows-x86_64/versions/3.8.0/typedb-all-windows-x86_64-3.8.0.zip"],
#    downloaded_file_path = "typedb-all-windows-x86_64-3.8.0.zip",
#)
